Use bytes() function to get the bytes of the temporary file
